[package]
name = "aoc-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day-3 = { path = "../challenge-libs/day-3" }
day-4 = { path = "../challenge-libs/day-4" }
day-5 = { path = "../challenge-libs/day-5" }
day-6 = { path = "../challenge-libs/day-6" }